# home-assistant-mealie-integration

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  hacs.json  info.md  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt
.github/workflows/: constraints.txt  tests.yaml
custom_components/mealie/: __init__.py  api.py  client.py  config_flow.py  const.py  coordinator.py  exception.py  http_client.py  manifest.json  sensor.py  strings.json  token_repository.py
custom_components/mealie/model/: model.py
custom_components/mealie/translations/: en.json
tests/: api_test.py  token_repository_test.py
