[tool.poetry]
name = "home-assistant-mealie-integration"
version = "0.1.0"
description = ""
authors = ["Marvin Straathof <marvinstraathof@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
asyncio = "^3.4.3"
aiohttp = "^3.8.1"
pytest-aiohttp = "^0.3.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.12b0"
isort = "^5.10.1"
mypy = "^0.920"
pyproject-flake8 = "^0.0.1-alpha.2"
pytest-mock = "^3.6.1"
pytest-cov = "^3.0.0"

[tool.black]
line-length = 80

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 80

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
