[tool.poetry]
name = "home-assistant-mealie-integration"
version = "0.1.0"
description = ""
authors = ["Marvin Straathof <marvinstraathof@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
black = "^21.12b0"
isort = "^5.10.1"
mypy = "^0.920"
pyproject-flake8 = "^0.0.1-alpha.2"
pytest-mock = "^3.6.1"
pytest-cov = "^3.0.0"
pytest-aiohttp = "^0.3.0"
homeassistant = "^2021.12.7"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma=true
force_grid_wrap=0
use_parentheses=true
line_length=88
indent = "    "
not_skip = "__init__.py"
force_sort_within_sections = true
sections = [
    "FUTURE",
    "STDLIB",
    "INBETWEENS",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER"
]
default_section = "THIRDPARTY"
known_first_party = ["custom_components.mealie", "tests"]
combine_as_imports = true

[tool.flake8]
exclude = [
    ".venv",
    ".git",
    ".tox",
    "docs",
    "venv",
    "bin",
    "lib",
    "deps",
    "build"
]
doctests = true
max-line-length = 88
ignore = [
    "E501",
    "W503",
    "E203",
    "D202",
    "W504"
]

[tool.pytest]
addopts = "-qq --cov=custom_components.mealie"
console_output_style = "count"

[tool.coverage.run]
branch = false

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
